mugene/src/jvmMain/kotlin/dev/atsushieno/mugene/parser/MugeneParser.java
// Generated from src/antlr/MugeneParser.g4 by ANTLR 4.7.2
package dev.atsushieno.mugene.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MugeneParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		StringLiteral=1, Comma=2, OpenParen=3, CloseParen=4, OpenCurly=5, CloseCurly=6, 
		Question=7, Caret=8, Plus=9, Minus=10, Asterisk=11, Slash=12, Percent=13, 
		Dollar=14, Colon=15, Dot=16, BackSlashLesser=17, BackSlashLesserEqual=18, 
		BackSlashGreater=19, BackSlashGreaterEqual=20, KeywordNumber=21, KeywordLength=22, 
		KeywordString=23, KeywordBuffer=24, NumberLiteral=25, Identifier=26;
	public static final int
		RULE_expressionOrOperationUses = 0, RULE_operationUses = 1, RULE_operationUse = 2, 
		RULE_argumentsOptCurly = 3, RULE_arguments = 4, RULE_argument = 5, RULE_expression = 6, 
		RULE_conditionalExpr = 7, RULE_comparisonExpr = 8, RULE_comparisonOperator = 9, 
		RULE_addSubExpr = 10, RULE_mulDivModExpr = 11, RULE_primaryExpr = 12, 
		RULE_unaryExpr = 13, RULE_variableReference = 14, RULE_stringConstant = 15, 
		RULE_stepConstant = 16, RULE_numberOrLengthConstant = 17, RULE_dots = 18, 
		RULE_canBeIdentifier = 19, RULE_commas = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"expressionOrOperationUses", "operationUses", "operationUse", "argumentsOptCurly", 
			"arguments", "argument", "expression", "conditionalExpr", "comparisonExpr", 
			"comparisonOperator", "addSubExpr", "mulDivModExpr", "primaryExpr", "unaryExpr", 
			"variableReference", "stringConstant", "stepConstant", "numberOrLengthConstant", 
			"dots", "canBeIdentifier", "commas"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "','", "'('", "')'", "'{'", "'}'", "'?'", "'^'", "'+'", "'-'", 
			"'*'", "'/'", "'%'", "'$'", "':'", "'.'", "'\\<'", "'\\<='", "'\\>'", 
			"'\\>='", "'number'", "'length'", "'string'", "'buffer'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "StringLiteral", "Comma", "OpenParen", "CloseParen", "OpenCurly", 
			"CloseCurly", "Question", "Caret", "Plus", "Minus", "Asterisk", "Slash", 
			"Percent", "Dollar", "Colon", "Dot", "BackSlashLesser", "BackSlashLesserEqual", 
			"BackSlashGreater", "BackSlashGreaterEqual", "KeywordNumber", "KeywordLength", 
			"KeywordString", "KeywordBuffer", "NumberLiteral", "Identifier"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MugeneParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MugeneParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ExpressionOrOperationUsesContext extends ParserRuleContext {
		public OperationUsesContext operationUses() {
			return getRuleContext(OperationUsesContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ExpressionOrOperationUsesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionOrOperationUses; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MugeneParserVisitor ) return ((MugeneParserVisitor<? extends T>)visitor).visitExpressionOrOperationUses(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionOrOperationUsesContext expressionOrOperationUses() throws RecognitionException {
		ExpressionOrOperationUsesContext _localctx = new ExpressionOrOperationUsesContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expressionOrOperationUses);
		try {
			setState(44);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Slash:
			case Colon:
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				operationUses(0);
				}
				break;
			case StringLiteral:
			case OpenCurly:
			case Caret:
			case Minus:
			case Percent:
			case Dollar:
			case Dot:
			case NumberLiteral:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				expression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperationUsesContext extends ParserRuleContext {
		public OperationUseContext operationUse() {
			return getRuleContext(OperationUseContext.class,0);
		}
		public OperationUsesContext operationUses() {
			return getRuleContext(OperationUsesContext.class,0);
		}
		public OperationUsesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operationUses; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MugeneParserVisitor ) return ((MugeneParserVisitor<? extends T>)visitor).visitOperationUses(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperationUsesContext operationUses() throws RecognitionException {
		return operationUses(0);
	}

	private OperationUsesContext operationUses(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		OperationUsesContext _localctx = new OperationUsesContext(_ctx, _parentState);
		OperationUsesContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_operationUses, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(47);
			operationUse();
			}
			_ctx.stop = _input.LT(-1);
			setState(53);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new OperationUsesContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_operationUses);
					setState(49);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(50);
					operationUse();
					}
					} 
				}
				setState(55);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class OperationUseContext extends ParserRuleContext {
		public CanBeIdentifierContext canBeIdentifier() {
			return getRuleContext(CanBeIdentifierContext.class,0);
		}
		public ArgumentsOptCurlyContext argumentsOptCurly() {
			return getRuleContext(ArgumentsOptCurlyContext.class,0);
		}
		public OperationUseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operationUse; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MugeneParserVisitor ) return ((MugeneParserVisitor<? extends T>)visitor).visitOperationUse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperationUseContext operationUse() throws RecognitionException {
		OperationUseContext _localctx = new OperationUseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_operationUse);
		try {
			setState(60);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				canBeIdentifier();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				canBeIdentifier();
				setState(58);
				argumentsOptCurly();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentsOptCurlyContext extends ParserRuleContext {
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public TerminalNode OpenCurly() { return getToken(MugeneParser.OpenCurly, 0); }
		public TerminalNode CloseCurly() { return getToken(MugeneParser.CloseCurly, 0); }
		public ArgumentsOptCurlyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argumentsOptCurly; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MugeneParserVisitor ) return ((MugeneParserVisitor<? extends T>)visitor).visitArgumentsOptCurly(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentsOptCurlyContext argumentsOptCurly() throws RecognitionException {
		ArgumentsOptCurlyContext _localctx = new ArgumentsOptCurlyContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_argumentsOptCurly);
		try {
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(62);
				arguments(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(63);
				match(OpenCurly);
				setState(64);
				match(CloseCurly);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				match(OpenCurly);
				setState(66);
				arguments(0);
				setState(67);
				match(CloseCurly);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentsContext extends ParserRuleContext {
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public CommasContext commas() {
			return getRuleContext(CommasContext.class,0);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MugeneParserVisitor ) return ((MugeneParserVisitor<? extends T>)visitor).visitArguments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentsContext arguments() throws RecognitionException {
		return arguments(0);
	}

	private ArgumentsContext arguments(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ArgumentsContext _localctx = new ArgumentsContext(_ctx, _parentState);
		ArgumentsContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_arguments, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(72);
			argument();
			}
			_ctx.stop = _input.LT(-1);
			setState(80);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ArgumentsContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_arguments);
					setState(74);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(75);
					commas(0);
					setState(76);
					argument();
					}
					} 
				}
				setState(82);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ArgumentContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MugeneParserVisitor ) return ((MugeneParserVisitor<? extends T>)visitor).visitArgument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentContext argument() throws RecognitionException {
		ArgumentContext _localctx = new ArgumentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_argument);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ConditionalExprContext conditionalExpr() {
			return getRuleContext(ConditionalExprContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MugeneParserVisitor ) return ((MugeneParserVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			conditionalExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalExprContext extends ParserRuleContext {
		public ComparisonExprContext comparisonExpr() {
			return getRuleContext(ComparisonExprContext.class,0);
		}
		public TerminalNode Question() { return getToken(MugeneParser.Question, 0); }
		public List<ConditionalExprContext> conditionalExpr() {
			return getRuleContexts(ConditionalExprContext.class);
		}
		public ConditionalExprContext conditionalExpr(int i) {
			return getRuleContext(ConditionalExprContext.class,i);
		}
		public TerminalNode Comma() { return getToken(MugeneParser.Comma, 0); }
		public ConditionalExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionalExpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MugeneParserVisitor ) return ((MugeneParserVisitor<? extends T>)visitor).visitConditionalExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionalExprContext conditionalExpr() throws RecognitionException {
		ConditionalExprContext _localctx = new ConditionalExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_conditionalExpr);
		try {
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				comparisonExpr();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				comparisonExpr();
				setState(89);
				match(Question);
				setState(90);
				conditionalExpr();
				setState(91);
				match(Comma);
				setState(92);
				conditionalExpr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparisonExprContext extends ParserRuleContext {
		public AddSubExprContext addSubExpr() {
			return getRuleContext(AddSubExprContext.class,0);
		}
		public ComparisonOperatorContext comparisonOperator() {
			return getRuleContext(ComparisonOperatorContext.class,0);
		}
		public ComparisonExprContext comparisonExpr() {
			return getRuleContext(ComparisonExprContext.class,0);
		}
		public ComparisonExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparisonExpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MugeneParserVisitor ) return ((MugeneParserVisitor<? extends T>)visitor).visitComparisonExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComparisonExprContext comparisonExpr() throws RecognitionException {
		ComparisonExprContext _localctx = new ComparisonExprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_comparisonExpr);
		try {
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				addSubExpr(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				addSubExpr(0);
				setState(98);
				comparisonOperator();
				setState(99);
				comparisonExpr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparisonOperatorContext extends ParserRuleContext {
		public TerminalNode BackSlashLesser() { return getToken(MugeneParser.BackSlashLesser, 0); }
		public TerminalNode BackSlashLesserEqual() { return getToken(MugeneParser.BackSlashLesserEqual, 0); }
		public TerminalNode BackSlashGreater() { return getToken(MugeneParser.BackSlashGreater, 0); }
		public TerminalNode BackSlashGreaterEqual() { return getToken(MugeneParser.BackSlashGreaterEqual, 0); }
		public ComparisonOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparisonOperator; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MugeneParserVisitor ) return ((MugeneParserVisitor<? extends T>)visitor).visitComparisonOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComparisonOperatorContext comparisonOperator() throws RecognitionException {
		ComparisonOperatorContext _localctx = new ComparisonOperatorContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_comparisonOperator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BackSlashLesser) | (1L << BackSlashLesserEqual) | (1L << BackSlashGreater) | (1L << BackSlashGreaterEqual))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddSubExprContext extends ParserRuleContext {
		public MulDivModExprContext mulDivModExpr() {
			return getRuleContext(MulDivModExprContext.class,0);
		}
		public AddSubExprContext addSubExpr() {
			return getRuleContext(AddSubExprContext.class,0);
		}
		public TerminalNode Plus() { return getToken(MugeneParser.Plus, 0); }
		public TerminalNode Caret() { return getToken(MugeneParser.Caret, 0); }
		public TerminalNode Minus() { return getToken(MugeneParser.Minus, 0); }
		public AddSubExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addSubExpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MugeneParserVisitor ) return ((MugeneParserVisitor<? extends T>)visitor).visitAddSubExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AddSubExprContext addSubExpr() throws RecognitionException {
		return addSubExpr(0);
	}

	private AddSubExprContext addSubExpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		AddSubExprContext _localctx = new AddSubExprContext(_ctx, _parentState);
		AddSubExprContext _prevctx = _localctx;
		int _startState = 20;
		enterRecursionRule(_localctx, 20, RULE_addSubExpr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(106);
			mulDivModExpr(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(119);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(117);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
					case 1:
						{
						_localctx = new AddSubExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_addSubExpr);
						setState(108);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(109);
						match(Plus);
						setState(110);
						mulDivModExpr(0);
						}
						break;
					case 2:
						{
						_localctx = new AddSubExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_addSubExpr);
						setState(111);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(112);
						match(Caret);
						setState(113);
						mulDivModExpr(0);
						}
						break;
					case 3:
						{
						_localctx = new AddSubExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_addSubExpr);
						setState(114);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(115);
						match(Minus);
						setState(116);
						mulDivModExpr(0);
						}
						break;
					}
					} 
				}
				setState(121);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class MulDivModExprContext extends ParserRuleContext {
		public PrimaryExprContext primaryExpr() {
			return getRuleContext(PrimaryExprContext.class,0);
		}
		public MulDivModExprContext mulDivModExpr() {
			return getRuleContext(MulDivModExprContext.class,0);
		}
		public TerminalNode Asterisk() { return getToken(MugeneParser.Asterisk, 0); }
		public TerminalNode Slash() { return getToken(MugeneParser.Slash, 0); }
		public TerminalNode Percent() { return getToken(MugeneParser.Percent, 0); }
		public MulDivModExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mulDivModExpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MugeneParserVisitor ) return ((MugeneParserVisitor<? extends T>)visitor).visitMulDivModExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MulDivModExprContext mulDivModExpr() throws RecognitionException {
		return mulDivModExpr(0);
	}

	private MulDivModExprContext mulDivModExpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		MulDivModExprContext _localctx = new MulDivModExprContext(_ctx, _parentState);
		MulDivModExprContext _prevctx = _localctx;
		int _startState = 22;
		enterRecursionRule(_localctx, 22, RULE_mulDivModExpr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(123);
			primaryExpr();
			}
			_ctx.stop = _input.LT(-1);
			setState(136);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(134);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						_localctx = new MulDivModExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_mulDivModExpr);
						setState(125);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(126);
						match(Asterisk);
						setState(127);
						primaryExpr();
						}
						break;
					case 2:
						{
						_localctx = new MulDivModExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_mulDivModExpr);
						setState(128);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(129);
						match(Slash);
						setState(130);
						primaryExpr();
						}
						break;
					case 3:
						{
						_localctx = new MulDivModExprContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_mulDivModExpr);
						setState(131);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(132);
						match(Percent);
						setState(133);
						primaryExpr();
						}
						break;
					}
					} 
				}
				setState(138);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class PrimaryExprContext extends ParserRuleContext {
		public VariableReferenceContext variableReference() {
			return getRuleContext(VariableReferenceContext.class,0);
		}
		public StringConstantContext stringConstant() {
			return getRuleContext(StringConstantContext.class,0);
		}
		public TerminalNode OpenCurly() { return getToken(MugeneParser.OpenCurly, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode CloseCurly() { return getToken(MugeneParser.CloseCurly, 0); }
		public StepConstantContext stepConstant() {
			return getRuleContext(StepConstantContext.class,0);
		}
		public UnaryExprContext unaryExpr() {
			return getRuleContext(UnaryExprContext.class,0);
		}
		public PrimaryExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primaryExpr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MugeneParserVisitor ) return ((MugeneParserVisitor<? extends T>)visitor).visitPrimaryExpr(this);
			else return visitor.visitChildren(this);
		}
	}
